<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e6e6e6">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".CampFragment">


            <TextView
                android:id="@+id/header_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#e05252"
                android:text="@string/camps_header"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#1a1a1a"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
        android:id="@+id/camp_image"
        android:layout_width="338dp"
        android:layout_height="332dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="27dp"
        android:src="@drawable/camp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header_text" />

            <TextView
                android:id="@+id/rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/armata"
                android:text="@string/experience_rating"
                android:textColor="#1a1a1a"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/end_grid"
                app:layout_constraintTop_toBottomOf="@+id/camp_image"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="36dp"
                android:layout_height="43dp"
                android:src="@drawable/newcanoe"
                app:layout_constraintBottom_toTopOf="@id/user_text"
                app:layout_constraintEnd_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="35dp"
                android:layout_height="44dp"
                android:layout_marginEnd="268dp"
                android:src="@drawable/newcanoe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_text" />


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="36dp"
                android:layout_height="43dp"
                android:layout_marginEnd="220dp"
                android:src="@drawable/newcanoe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_text" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="36dp"
                android:layout_height="43dp"
                android:layout_marginEnd="316dp"
                android:src="@drawable/newcanoe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_text" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="36dp"
                android:layout_height="43dp"
                android:layout_marginEnd="176dp"
                android:src="@drawable/newcanoe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_text" />

            <TextView
        android:id="@+id/user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/armata"
        android:text="Camp Leader Pravin"
        android:textColor="#1a1a1a"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_text" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="321dp"
                android:layout_height="223dp"
                android:fontFamily="@font/armata"
                android:text="@string/Leader_Review"
                android:gravity="center"
                android:textColor="#1a1a1a"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/end_grid"
                app:layout_constraintHorizontal_bias="0.375"
                app:layout_constraintStart_toStartOf="@+id/start_grid"
               app:layout_constraintTop_toBottomOf="@id/imageView6"
                tools:layout_editor_absoluteY="548dp" />









        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>